deploy/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-sample
spec:
  selector:
    matchLabels:
      app: angular-sample
  replicas: 1
  template:
    metadata:
      labels:
        app: angular-sample  # for service
    spec:
      containers:
      - name: angular-sample
        image: roccqqck/angular-sample:0.0.6
        imagePullPolicy: Always
############# advanced setting not necessarily
        ports:
        - containerPort: 8081
        resources:
          requests: 
            cpu: 1m
            memory: 10Mi
          limits:
            cpu: 1
            memory: 1G
        livenessProbe:
          httpGet:
            path: /
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - mountPath: /opt/bitnami/nginx/conf/server_blocks/ 
          readOnly: true
          name: bitnami-nginx-conf-serverblocks-volume   # mount bitnami-nginx-conf-serverblocks-volume volume to /opt/bitnami/nginx/conf/server_blocks/
      volumes:
      - name: bitnami-nginx-conf-serverblocks-volume    # volume name
        configMap:
          name: angular-sample-configmap
          items:
            - key: bitnami-nginx-server-blocks.conf
              path: my_server_block.conf   # rename bitnami-nginx-server-blocks.conf
