deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-sample
spec:
  selector:
    app: angular-sample  # deployment.spec.template.metadata.labels.app
  ports:
  - protocol: "TCP"
    name: http
    port: 8081  # service port
    targetPort: 8081  # container port
